<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="16dp">

    <EditText
        android:id="@+id/nomeecognome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nomeecognome"
        android:background="@drawable/edittext"
        android:layout_marginBottom="16sp" />

    <EditText
        android:id="@+id/indirizzo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_indirizzo"
        android:background="@drawable/edittext"
        android:layout_marginBottom="16sp" />

    <EditText
        android:id="@+id/usernameregistrazione"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username"
        android:background="@drawable/edittext"
        android:layout_marginBottom="16sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext"
        android:layout_marginBottom="16sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16sp">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:background="@drawable/edittext"
            android:paddingEnd="48dp" />

        <ImageView
            android:id="@+id/showPassword"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end|center_vertical"
            android:padding="8dp"
            android:src="@drawable/passwordicon"
            android:contentDescription="@string/show_password"
            android:layout_marginEnd="12dp"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16sp">

        <EditText
            android:id="@+id/confermapassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword"
            android:paddingEnd="48dp" />

        <ImageView
            android:id="@+id/showConfirmPassword"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end|center_vertical"
            android:padding="8dp"
            android:src="@drawable/passwordicon"
            android:contentDescription="@string/show_confirm_password"
            android:layout_marginEnd="12dp"/>
    </FrameLayout>

    <Button
        android:id="@+id/registerbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        style="@style/GreenButton"
        android:layout_marginTop="16sp" />
</LinearLayout>
