<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Registrazione con numero di telefono"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:background="@drawable/edittext"
        android:hint="@string/hint_inserisci_numero_telefono"
        android:inputType="phone"
        android:layout_marginBottom="16sp" />


    <!--
    <EditText
        android:id="@+id/nomeecognomephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext"
        android:hint="@string/hint_nome_e_cognome"
        android:layout_marginBottom="16sp" />

    <EditText
        android:id="@+id/indirizzophone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext"
        android:hint="@string/hint_indirizzotel"
        android:layout_marginBottom="16sp" />
        -->

    <EditText
        android:id="@+id/usernamepercellulare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext"
        android:hint="@string/hint_inserisci_username"
        android:layout_marginBottom="16sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16sp">

        <EditText
            android:id="@+id/passwordTel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_passwordtel"
            android:inputType="textPassword"
            android:background="@drawable/edittext"
            android:paddingEnd="48dp" />

        <ImageView
            android:id="@+id/showPasswordTel"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end|center_vertical"
            android:padding="8dp"
            android:src="@drawable/passwordicon"
            android:contentDescription="@string/descr_mostra_password"
            android:layout_marginEnd="12dp"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16sp">

        <EditText
            android:id="@+id/confermapasswordtel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext"
            android:hint="@string/hint_conferma_password"
            android:inputType="textPassword"
            android:paddingEnd="48dp" />

        <ImageView
            android:id="@+id/showConfirmPasswordTel"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end|center_vertical"
            android:padding="8dp"
            android:src="@drawable/passwordicon"
            android:contentDescription="@string/descr_mostra_conferma_password"
            android:layout_marginEnd="12dp"/>
    </FrameLayout>

    <Button
        android:id="@+id/sendCodeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_invia_codice"
        style="@style/GreenButton"
        android:layout_marginBottom="16sp" />

    <EditText
        android:id="@+id/codeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext"
        android:hint="@string/hint_inserisci_codice"
        android:inputType="number"
        android:layout_marginBottom="16sp" />

    <Button
        android:id="@+id/verifyCodeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_verifica_codice"
        style="@style/GreenButton" />
</LinearLayout>