<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"

    android:padding="16dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_scegli_registrazione"

        android:textSize="25sp"

        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="16dp"/>

    <Button
       android:id="@+id/btn_email"
        android:layout_marginBottom="16sp"
       android:layout_width="match_parent"
       style="@style/GreenButton"
       android:layout_height="wrap_content"
       android:text="@string/btn_registrati_email"/>

    <Button
            android:id="@+id/btn_phone"
            style="@style/GreenButton"
            android:layout_marginBottom="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_registrati_telefono"/>


    <TextView
        android:id="@+id/tv_gotologin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="18sp"
        android:text="@string/tv_gia_registrato"
        android:layout_gravity="center_horizontal"
        android:paddingTop="16dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_gotologin"
        style="@style/GreenButton"
        android:text="@string/btn_gotologinfrommain"
        />

    <TextView
        android:id="@+id/sceglilingua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18sp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/tvsceglilinguamainact"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"/>
    <Button
        android:id="@+id/btn_italian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Italiano"
        style="@style/GreenButton"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"/>

    <Button
        android:id="@+id/btn_english"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Inglese"
        style="@style/GreenButton"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>


</LinearLayout>


