<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/nomesintomo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#333333"
        android:textStyle="bold"
        android:paddingLeft="16dp"
        android:text="@string/nome_sintomo" />

    <LinearLayout
        android:id="@+id/textview_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nomesintomo"
        android:orientation="horizontal"
        android:layout_marginTop="2sp"
        android:gravity="center">

        <TextView
            android:id="@+id/textview1"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gravita_lieve"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="16sp" />

        <TextView
            android:id="@+id/textview2"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gravita_moderata"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="16sp" />

        <TextView
            android:id="@+id/textview3"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gravita_grave"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="16sp" />

        <TextView
            android:id="@+id/textview4"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gravita_molto_grave"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/checkbox_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_layout"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="8sp">

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <CheckBox
                android:id="@+id/cbgravita1"
                android:buttonTint="#4CAF50"
                android:background="@drawable/checkboxbackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <CheckBox
                android:id="@+id/cbgravita2"
                android:buttonTint="#4CAF50"
                android:background="@drawable/checkboxbackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <CheckBox
                android:id="@+id/cbgravita3"
                android:layout_width="wrap_content"
                android:buttonTint="#4CAF50"
                android:background="@drawable/checkboxbackground"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <CheckBox
                android:id="@+id/cbgravita4"
                android:buttonTint="#4CAF50"
                android:background="@drawable/checkboxbackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/divisoresintomi"
        android:layout_width="match_parent"
        android:layout_height="2sp"
        android:layout_below="@id/checkbox_layout"
        android:background="#4CAF50"
        android:layout_marginTop="12dp" />
</RelativeLayout>
